:sparkles:[630] added the option to make the post calls with owms_indentifier and owms_pref_label
